# cpack-exercise

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_packages.sh  inittimezone  main.cpp  packaging.sh  run_in_container.sh  solution.vtk
cmake/: MyPackagingModule.cmake  Packaging.cmake
cpack-ex/: CMakeLists.txt
helper_scripts/: build_in_docker  build_project  install_yaml_cpp  run_in_docker
